# aloe

./: CMakeLists.txt  README.md  README.md~  index.html  ofdm.app  ofdm_demo.m  params.json
aloe_core/: .cproject  .project  CMakeLists.txt  license.txt
aloe_core/Debug/: makefile  objects.mk  runcf  sources.mk  test.app  test2.app
aloe_core/Debug/base/: execinfo.d  interface.d  man_platform.d  man_probelistener.d  manapi_base.d  manapi_error.d  mapping.d  module.d  nod_anode.d  nod_dispatcher.d  nod_module.d  nod_module_execinfo.d  nod_sync.d  nod_variable.d  nod_waveform.d  nod_waveform_status.d  packet.d  subdir.mk  variable.d  waveform.d  waveform_status.d
aloe_core/Debug/common/: subdir.mk
aloe_core/Debug/hwapi/: dummy_test.d  hwapi_base.d  hwapi_error.d  hwapi_file.d  hwapi_itfphysic.d  hwapi_itfqueue.d  hwapi_kernel.d  hwapi_process.d  (+8 more)
aloe_core/base/: execinfo.c  interface.c  interface.h  man_dataitf.h  man_node.h  man_platform.c  man_platform.h  man_probehandlers.h  man_probelistener.c  man_probelistener.h  man_processor.h  manapi_base.c  manapi_context.h  manapi_error.c  manapi_error.h  mapping.c  mapping.h  modexecinfo.h  module.c  module.h  nod_anode.c  nod_anode.h  nod_dispatcher.c  nod_dispatcher.h  nod_module.c  nod_module.h  nod_module_execinfo.c  nod_module_execinfo.h  nod_sync.c  nod_sync.h  nod_variable.c  nod_variable.h  nod_waveform.c  nod_waveform.h  nod_waveform_status.c  nod_waveform_status.h  packet.c  packet.h  variable.c  variable.h  (+4 more)
aloe_core/common/: defs.h  objects_max.h  packet.c  serializable.c  str.h  waveform.c
aloe_core/doc/: hwapi.doxyfile
aloe_core/hwapi/: dummy_test.c  dummy_test.h  futex.h  hwapi_base.c  hwapi_context.h  hwapi_dac.h  hwapi_dacuhd.h  hwapi_dacx5.h  hwapi_error.c  hwapi_error.h  hwapi_file.c  hwapi_file.h  hwapi_itf.c  hwapi_itf.h  hwapi_itfphysic.c  hwapi_itfphysic.h  hwapi_itfqueue.c  hwapi_itfqueue.h  hwapi_kernel.c  hwapi_kernel.h  hwapi_periodic.h  hwapi_process.c  hwapi_process.h  hwapi_shm.c  hwapi_task.c  hwapi_task.h  hwapi_time.c  hwapi_time.h  hwapi_timer.c  hwapi_timer.h  pipeline.c  pipeline.h  pipeline_sync.h  queue.c  queue.h  tx_rx_test.c
aloe_core/hwapi_lnx/: CMakeLists.txt
aloe_core/manager/: man_mapping.c  man_platform.c  man_probelistener.h  man_waveform.c  man_waveform_parser.c
aloe_core/manapi/: manapi_context.h  manapi_error.c
aloe_core/node/: nod_anode.c  nod_anode.h  nod_dispatcher.c  nod_dispatcher.h  nod_module.c  nod_variable.c  nod_waveform.c
aloe_core/swapi/: CMakeLists.txt
aloe_core/swapi_shared/: swapi_context.c  swapi_context.h  swapi_counter.c  swapi_counter.h  swapi_error.c  swapi_error.h  swapi_itf.c  swapi_itf.h  swapi_log.c  swapi_log.h  swapi_var.c  swapi_var.h
aloe_core/test_suite/: run_test_suite_waveform.c
modrep_default/: CMakeLists.txt  modrep_default.h
modrep_default/dummy/: CMakeLists.txt
modrep_default/html/: annotated.html  classes.html  dir_0190a8de3fdc1efaf60a2fae746f01d2.html  dir_49eeb0c9c9fe358e07687354dd583194.html  dir_4a6f19a66426fde3d86f3d46b37220e5.html  dir_75849ffb4d82d64a5eee84c32320369f.html  dir_7dd7b90b9eb1d1be6724705cb176692e.html  dir_91e516a773b1c7c2e0ad73e4ca0cff90.html  dir_981901e43fa1d48f2a889af6e2b4edf9.html  dir_b560697d55f8a6d7acda971ad36b8bc4.html  dir_c4fba59a7b39195214af006ac1858829.html  dir_ca59f7b55421aab1e131ccb1c91d7fc9.html  dir_d86cc69acf9b544a76d4ad021510fe33.html  dir_f0b384954175a819c7ba5058d9252568.html  dir_f1cb2ce1e10f259983aa49b62cf863c7.html  fft_8h_source.html  files.html  generators_8h_source.html  group__plp__sink.html  group__source.html  group__template.html  group__template__legacy.html  group__template__plain.html  index.html  modrep__default_8h_source.html  modules.html  plp_8h_source.html  plp__sink_8h_source.html  source_8h_source.html  structgenerator__t.html  template_8h_source.html  template__plain_8h_source.html  templatelegacy_8h_source.html  templatelegacy__interfaces_8h_source.html  templatelegacy__params_8h_source.html  test__generate_8h_source.html
modrep_default/plp_sink/: CMakeLists.txt
modrep_default/source/: CMakeLists.txt
modrep_default/template/: CMakeLists.txt
modrep_default/template_legacy/: CMakeLists.txt
modrep_default/template_plain/: CMakeLists.txt
modrep_default/test_tx/: .project  CMakeLists.txt  test_tx.c
oecore/: CMakeLists.txt
oecore/doc/: base.doxyfile  swapi.doxyfile
oecore/include/: defs.h  objects_max.h  skeleton.h  swapi_types.h
oesr/: CMakeLists.txt
oesr/html/: annotated.html  classes.html  dir_2f0b00c0211dbf39711c0bf44f1d68b1.html  dir_7838d14826a8f2dfa21b3eef6bded90d.html  dir_9f7e87e02646b94ad645141e0f14ad25.html  dir_cf6406bfdd6111f013470fc58e10e89d.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__base.html  group__counter.html  group__error.html  group__itf.html  group__log.html  group__module__functions.html  group__var.html  index.html  modules.html  oesr_8h.html  oesr_8h_source.html  oesr__context_8c.html  oesr__context_8h.html  oesr__context_8h_source.html  oesr__counter_8c.html  oesr__counter_8h.html  oesr__counter_8h_source.html  oesr__error_8c.html  oesr__error_8h.html  oesr__error_8h_source.html  oesr__itf_8c.html  oesr__log_8c.html  oesr__log_8h.html  oesr__log_8h_source.html  oesr__var_8c.html  (+4 more)
oesr/include/: oesr.h  oesr_man.h  oesr_man_types.h  oesr_types.h  params.h  skeleton.h
rtdal_lnx/: CMakeLists.txt
rtdal_lnx/include/: rtdal.h  rtdal_machine.h  rtdal_types.h
rtdal_lnx/src/: defs.h  objects_max.h  pipeline.c  pipeline.h  pipeline_sync.h  queue.c  queue.h  rtdal_base.c  rtdal_context.h  rtdal_dac.h  rtdal_dacuhd.h  rtdal_dacx5.h  rtdal_error.c  rtdal_error.h  rtdal_file.c  rtdal_file.h  rtdal_itf.c  rtdal_itf.h  rtdal_itfphysic.c  rtdal_itfphysic.h  rtdal_itfqueue.c  rtdal_itfqueue.h  rtdal_itfspscq.c  rtdal_itfspscq.h  rtdal_kernel.c  rtdal_kernel.h  rtdal_periodic.h  rtdal_process.c  rtdal_process.h  rtdal_task.c  rtdal_task.h  rtdal_time.c  rtdal_time.h  rtdal_timer.c  rtdal_timer.h  str.h
(+1127 files in other folders)
